🔝 Header bug on mobile

--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -53,7 +53,8 @@
     & ul {
       @media screen and (max-width: $medium) {
         // display: none;
-       height: 51vh; 
+       height: auto; 
+        top: 45%;
         margin: auto;
         padding-left: 0;
       }
