--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -143,7 +143,8 @@ a {
     bottom: 30px; }
     @media screen and (max-width: 500px) {
       .hero-container .hero-header ul {
-        height: 51vh;
+        height: auto;
+        top: 45%;
         margin: auto;
         padding-left: 0; } }
     .hero-container .hero-header ul a {
