--- a/src/styles/components/all.css
+++ b/src/styles/components/all.css
@@ -71,7 +71,8 @@
     bottom: 30px; }
     @media screen and (max-width: 500px) {
       .hero-container .hero-header ul {
-        height: 51vh;
+        height: auto;
+        top: 45%;
         margin: auto;
         padding-left: 0; } }
     .hero-container .hero-header ul a {
